--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-native": "0.62.2",
     "react-native-config": "^1.2.1",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-maps": "^0.27.1",
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
+    "react-native-vector-icons": "^7.0.0",
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2",
     "react-redux": "^7.2.0",
@@ -28,7 +30,8 @@
     "redux-form": "^8.3.6",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
